--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PoraclWeb",
+  "name": "PoracleWeb",
   "version": "1.0.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
